v1.4.0
- Added LANGUAGE SUPPORT! (English, German, Chinese, Russian, Polish)
- Added NEW GUI size customizations (Resize, Font Size, and more!)
- Added First Launch setup screen
- Added Missing breaker esp color to settings
- Added Search feature to the item manager
- Added Search feature to keybind list
- Added feature where cursor will be shown/hidden when you toggle the menu
- Fixed Kill Nearby Enemies
- Fixed EnemyFilter not working on esp/chams
- Removed Basic GUISize

v1.3.2
- Added Place All Scrap on Company Desk
- Added Ability to sell more than 12 items at a time
- Added Enemy Tab in place of Enemy Manager
- Moved all enemy related hacks to the Enemy Tab
- Removed Enemy Manager
- Fixed FPS Issues with NoClip

v1.3.1
- Added Strong Hands (Carry any item with 1 hand) 
- Added Invisibility
- Added Spawn Landmine (Host Only)
- Added Spawn Turret (Host Only)
- Added Spawn Random Landmines/Turrets  (Spawns a random number of mines/turrets in the factory, Host Only)
- Added Ability to force HoarderBugs to steal all items
- Fixed ESP/Chams causing crashes/instability with frames
- Fixed Issue with strong hands not allowing you to pick up items
- Fixed Issue where NoCooldown would make the shovel rapid fire constantly

v1.3.0
- Added CHAMS w/ settings
- Added Super Shovel (Damage x1000)
- Added Support for 8 character hex codes for colors with alpha
- Added Create Mimics From Masks (Must pickup mask first)
- Added Lure Enemies to Player
- Added Lure All Enemies to Player
- Added Control Enemy (Use SpeedHack for movement Speed)
- Added Instant Interact
- Added No Cooldowns
- Added KeyBind for Kill Nearby Enemies
- Added Mouse Binds (Left, Right, Middle, Forward, Backward)
- Added ESP Enemy Filter Settings
- Added a host requirement label if not host for spawning enemies in the Enemy Manager
- Fixed No Carry Weight
- Removed SpawnRandomValueable (Use Item Manager)
- Major code changes to UI and hack executors to make it neat and tidy

v1.2.1